--- a/src/UserBundle/Resources/translations/messages.pt_BR.yml
+++ b/src/UserBundle/Resources/translations/messages.pt_BR.yml
@@ -52,6 +52,5 @@ user:
         confirm_password: Confirme a Senha
         new_password: Nova senha
         new_password_confirmation: Confirme a nova senha
-        is_enabled: Ativo
-        is_not_enabled: Não Ativo
+        enabled: Ativo
         remember_me: Lembrar-me
