--- a/src/AdminBundle/Resources/translations/messages.pt_BR.yml
+++ b/src/AdminBundle/Resources/translations/messages.pt_BR.yml
@@ -6,13 +6,11 @@ admin:
         edit: Editar Cliente
         not_found: Nenhum cliente encontrado
         fields:
-            full_name: Nome Completo
-            first_name: Primeiro Nome
-            last_name: Sobrenome
+            name: Nome
             email: E-mail
+            cnpj: CNPJ
             password: Senha
             phone_number: Telefone
-            subscribed_to_newsletter: Receber novidades
             last_login: Último Login
             created_at: Data Criação
-        impersonate: Successfully impersonated customer %name%
+        impersonate: Cliente %name% logado com sucesso
