--- a/src/AdminBundle/Resources/translations/messages.pt_BR.yml
+++ b/src/AdminBundle/Resources/translations/messages.pt_BR.yml
@@ -45,4 +45,4 @@ admin:
             amount: Valor
             amountPaid: Valor Pago
             note: Observações
-            createdAt: Data de Criação
+            createdAt: Data de Emissão
